[package]
name = "canbus"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true }

sc-cli = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus-aura = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["std"] }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sc-client-api = { workspace = true }
sc-rpc-api = { workspace = true }
sc-basic-authorship = { workspace = true }

sp-runtime = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }

frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
frame-benchmarking-cli = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }

canbus-runtime = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"canbus-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"canbus-runtime/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
